--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -68,7 +68,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位结束
 
 ;设置节点分组标志位
-custom_proxy_group=💰 剩余流量`select`(有效期|剩余|剩|剩余流量|流量|套餐|到期|套餐到期|官网)
+custom_proxy_group=💰 剩余流量`select`(有效期|剩余|剩|剩余流量|套餐|到期|套餐到期|官网)
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
