--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -14,6 +14,7 @@
 ;以下规则，按照从上往下的顺序遍历，优先命中上位规则
 ;修改顺序会影响分流效果
 
+;后面我追加了一个catchmissing配置文件用于代理遗漏的目标，此处可以添加一个passmissing用于直连指定目标
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
@@ -64,6 +65,7 @@ ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
 ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
+ruleset=🎯 节点选择,节点选择,https://raw.githubusercontent.com/EagleQL/Custom_OpenClash_Rules/main/rule/CatchMissing.list
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位结束
 
