--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -65,7 +65,7 @@ ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
 ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
-ruleset=🎯 节点选择,https://raw.githubusercontent.com/EagleQL/Custom_OpenClash_Rules/main/rule/CatchMissing.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/EagleQL/Custom_OpenClash_Rules/main/rule/CatchMissing.list
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位结束
 
