--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -139,8 +139,12 @@ custom_proxy_group=🇻🇳 越南节点HQ`url-test`(越南|Vietnam).*(HQ)`http:
 
 custom_proxy_group=HQ 优质节点`url-test`(HQ)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=HA 高可用`fallback`[]HQ 优质节点`[]🚀 节点选择`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
+
+custom_proxy_group=`负载均衡组`select`(FK|负载|均衡|LB|Load)
 ;设置分组标志位
 
 ;下方参数请勿修改
+exclude_remarks=(DIRECT|FK|LB|Load|负载|均衡)
+remove_direct=true
 enable_rule_generator=true
 overwrite_original_rules=true
