--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -137,7 +137,7 @@ custom_proxy_group=🇹🇷 土耳其节点HQ`url-test`(土耳其|Turkey|Türkiy
 ;custom_proxy_group=🇮🇳 印度节点HQ`url-test`(印度|India|新德里|孟买).*(HQ)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点HQ`url-test`(越南|Vietnam).*(HQ)`http://cp.cloudflare.com/generate_204`300,,50
 
-custom_proxy_group=!!HQ 优质节点`url-test`(HQ)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=!!HQ 优质节点`url-test`(HQ)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=HA 高可用`fallback`[]HQ 优质节点`[]🚀 节点选择`[]♻️ 自动选择`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=`负载均衡组`select`(FK|负载|均衡|LB|Load)
