--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -105,20 +105,20 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🔥 HA 高可用`[]🥤 普通节
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 
-custom_proxy_group=🇭🇰 香港节点`fallback`[]香港节点HQ`[]香港节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国节点`fallback`[]美国节点HQ`[]美国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`fallback`[]日本节点HQ`[]日本节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`fallback`[]新加坡节点HQ`[]新加坡节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🦘 澳洲节点`fallback`[]澳洲节点HQ`[]澳洲节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾节点`fallback`[]台湾节点HQ`[]台湾节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`fallback`[]韩国节点HQ`[]韩国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`fallback`[]加拿大节点HQ`[]加拿大节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`fallback`[]英国节点HQ`[]英国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`fallback`[]法国节点HQ`[]法国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`fallback`[]德国节点HQ`[]德国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`fallback`[]荷兰节点HQ`[]荷兰节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`fallback`[]土耳其节点HQ`[]土耳其节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇻🇳 越南节点`fallback`[]越南节点HQ`[]越南节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`fallback`[]🇭🇰 香港节点HQ`[]🇭🇰 香港节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国节点`fallback`[]🇺🇸 美国节点HQ`[]🇺🇸 美国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`fallback`[]🇯🇵 日本节点HQ`[]🇯🇵 日本节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡节点`fallback`[]🇸🇬 新加坡节点HQ`[]🇸🇬 新加坡节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🦘 澳洲节点`fallback`[]🦘 澳洲节点HQ`[]🦘 澳洲节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾节点`fallback`[]🇹🇼 台湾节点HQ`[]🇹🇼 台湾节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`fallback`[]🇰🇷 韩国节点HQ`[]🇰🇷 韩国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇦 加拿大节点`fallback`[]🇨🇦 加拿大节点HQ`[]🇨🇦 加拿大节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`fallback`[]🇬🇧 英国节点HQ`[]🇬🇧 英国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇫🇷 法国节点`fallback`[]🇫🇷 法国节点HQ`[]🇫🇷 法国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`fallback`[]🇩🇪 德国节点HQ`[]🇩🇪 德国节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇳🇱 荷兰节点`fallback`[]🇳🇱 荷兰节点HQ`[]🇳🇱 荷兰节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇷 土耳其节点`fallback`[]🇹🇷 土耳其节点HQ`[]🇹🇷 土耳其节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇻🇳 越南节点`fallback`[]🇻🇳 越南节点HQ`[]🇻🇳 越南节点NORMAL`[]🔥 HA 高可用`http://cp.cloudflare.com/generate_204`300,,50
 
 custom_proxy_group=🇭🇰 香港节点NORMAL`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)(?!.*HQ)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点NORMAL`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)(?!.*HQ)`http://cp.cloudflare.com/generate_204`300,,50
