--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -29,6 +29,7 @@ ruleset=💬 Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🧔🏻‍♂️ Claude,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.list
 ruleset=🔍 Perplexity,https://raw.githubusercontent.com/EagleQL/Custom_OpenClash_Rules/refs/heads/main/rule/Perplexity.list
 ruleset=∞ Meta,https://raw.githubusercontent.com/EagleQL/Custom_OpenClash_Rules/refs/heads/main/rule/Meta.list
+ruleset=∞ Immerse,https://raw.githubusercontent.com/EagleQL/Custom_OpenClash_Rules/refs/heads/main/rule/Immerse.list
 ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=🚀 测速工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
@@ -97,6 +98,7 @@ custom_proxy_group=💬 Copilot`select`[]🇸🇬 新加坡节点`[]🇺🇸 美
 custom_proxy_group=🧔🏻‍♂️ Claude`select`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🇭🇰 香港节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
 custom_proxy_group=🔍 Perplexity`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🎯 全球直连`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=∞ Meta`select`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🎯 全球直连`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
+custom_proxy_group=∞ Immerse`select`[]🇺🇸 美国节点`[]🇨🇦 加拿大节点`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🎯 全球直连`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🎶 TikTok`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`.*
 custom_proxy_group=📹 YouTube`select`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🔥 HA 高可用`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🎥 Netflix`select`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🔥 HA 高可用`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
